Updated ruff.toml to allow simpler settings

--- a/.github/workflows/code-ql-check-ci.yml
+++ b/.github/workflows/code-ql-check-ci.yml
@@ -26,67 +26,6 @@ jobs:
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-      - name: Check snake case naming style for Python files and folders
-        id: snake-case-naming-check
-        run: |
-          violations=0
-
-          bad_files="$(mktemp)"
-          bad_dirs="$(mktemp)"
-
-          while IFS= read -r file; do
-            base_name="$(basename "$file")"
-            dir_path="$(dirname "$file" | sed 's#^\./##')"
-
-            if ! [[ "$base_name" =~ ^[a-z][a-z0-9_]*\.py$ ]]; then
-              echo "$file" >> "$bad_files"
-              violations=1
-            fi
-
-            IFS='/' read -r -a parts <<< "$dir_path"
-            for part in "${parts[@]}"; do
-              [ -z "$part" ] && continue
-              case "$part" in
-                .git|.github|.pixi|.venv|venv|__pycache__|site-packages|node_modules|dist|build)
-                  continue ;;
-              esac
-              if ! [[ "$part" =~ ^[a-z][a-z0-9_]*$ ]]; then
-                echo "$part [$file]" >> "$bad_dirs"
-                violations=1
-              fi
-            done
-          done < <(find . -type f -name "*.py" \
-                    -not -path "./.git/*" \
-                    -not -path "./.github/*" \
-                    -not -path "./.pixi/*" \
-                    -not -path "./venv/*" \
-                    -not -path "./.venv/*" \
-                    -not -path "*/__pycache__/*")
-
-          if [ -s "$bad_files" ] || [ -s "$bad_dirs" ]; then
-            echo "## Snake case naming check FAILED" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            if [ -s "$bad_files" ]; then
-              echo "### Python file names that are not snake case:" >> $GITHUB_STEP_SUMMARY
-              echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-              sort -u "$bad_files" >> $GITHUB_STEP_SUMMARY
-              echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-              echo "" >> $GITHUB_STEP_SUMMARY
-            fi
-            if [ -s "$bad_dirs" ]; then
-              echo "### Non-snake_case directory names (with example file path):" >> $GITHUB_STEP_SUMMARY
-              echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-              sort -u "$bad_dirs" >> $GITHUB_STEP_SUMMARY
-              echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-              echo "" >> $GITHUB_STEP_SUMMARY
-            fi
-            rm -f "$bad_files" "$bad_dirs"
-            exit 1
-          else
-            echo "## Snake case naming check PASSED" >> $GITHUB_STEP_SUMMARY
-            rm -f "$bad_files" "$bad_dirs"
-          fi
-        continue-on-error: true
 
       - name: Run Ruff Format Check
         id: format-check
@@ -156,17 +95,10 @@ jobs:
             echo "| Lint Check | ❌ FAILED | Linting issues found |" >> $GITHUB_STEP_SUMMARY
           fi
           
-          # Naming check result
-          if [ "${{ steps.snake-case-naming-check.outcome }}" = "success" ]; then
-            echo "| Naming Check | ✅ PASSED | All Python files and folders are snake case |" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "| Naming Check | ❌ FAILED | Non-snake case Python file or folder names found |" >> $GITHUB_STEP_SUMMARY
-          fi
-          
           echo "" >> $GITHUB_STEP_SUMMARY
           
           # Overall status
-          if [ "${{ steps.format-check.outcome }}" = "success" ] && [ "${{ steps.lint-check.outcome }}" = "success" ] && [ "${{ steps.snake-case-naming-check.outcome }}" = "success" ]; then
+          if [ "${{ steps.format-check.outcome }}" = "success" ] && [ "${{ steps.lint-check.outcome }}" = "success" ]; then
             echo "### Overall Status: ALL CHECKS PASSED!" >> $GITHUB_STEP_SUMMARY
           else
             echo "### Overall Status: FIXES NEEDED" >> $GITHUB_STEP_SUMMARY
@@ -175,7 +107,7 @@ jobs:
           fi
 
       - name: Fail job if any checks failed
-        if: steps.format-check.outcome == 'failure' || steps.lint-check.outcome == 'failure' || steps.snake-case-naming-check.outcome == 'failure'
+        if: steps.format-check.outcome == 'failure' || steps.lint-check.outcome == 'failure'
         run: |
           echo "❌ Code quality checks failed. Please review the summary above for details."
           exit 1
