Added check for extension bundling

--- a/.github/workflows/extension-bundling.yml
+++ b/.github/workflows/extension-bundling.yml
@@ -48,7 +48,7 @@ jobs:
     steps:
       - name: Write run summary
         run: |
-          echo "## Pixi Build Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## Build Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Field | Value |" >> $GITHUB_STEP_SUMMARY
           echo "|------|-------|" >> $GITHUB_STEP_SUMMARY
